<resources>
    <string name="app_name">Журнал обходов</string>

    <string name="alert_fail">Нет соединения с сервером</string>
    <string name="alert_enter_login">Введите имя пользователя</string>
    <string name="alert_wrong_role">Неподходящая роль</string>
    <string name="alert_bad_passwd">Неверный пароль</string>
    <string name="alert_error_getting_data">Ошибка получения данных: </string>
    <string name="alert_error_saving_data">Ошибка сохранения данных: </string>
    <string name="alert_ndc_added">NFC добавлена</string>
    <string name="alert_plant_not_found">Помещение/оборудование не найдено</string>
    <string name="alert_nfc_not_found">Чситайте NFC метку</string>
    <string name="alert_unique_name">Наименование должно быть уникальным</string>
    <string name="alert_item_sucсess_added">Запись успешно добавлена</string>

    <string name="dialog_title">Внимание!</string>
    <string name="dialog_nfc_for">NFC метка назначена для </string>
    <string name="dialog_route_select">Начать обход по маршруту: </string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_checkup_text">Обход не завершен. Уйти и оставить незавершенным?</string>
    <string name="dialog_checkup_continue">Продолжаем обход</string>

    <string name="main_button_setup">Настройка</string>
    <string name="main_button_login">Вход</string>
    <string name="main_text_name">Имя</string>
    <string name="main_text_password">Пароль</string>
    <string name="main_text_facility">Площадка</string>
    <!--    <string name="main_toast_role">Роль не подходит для использования мобильного приложения</string>-->

    <string name="setup_text_server">Адрес API-сервера</string>
    <string name="setup_text_hint">http://server:port</string>
    <string name="setup_button">Запомнить</string>

    <string name="admin_button_check_nfc">Проверить NFC</string>
    <string name="admin_button_link_nfc">Добавить NFC</string>
    <string name="admin_button_add_place">Добавить помещение/оборудование</string>

    <string name="check_nfc_tag_serial">NFC serial:</string>
    <string name="check_nfc_tag_facility">Площадка:</string>
    <string name="check_nfc_tag_plant">№ помещения:</string>
    <string name="check_nfc_tag_plant_descr">Наименование помещения:</string>
    <string name="check_nfc_tag_plant_descr_params">Контролируемые параметры:</string>
    <string name="check_nfc_params">Параметры:</string>
    <string name="check_nfc_button_clear">Очистить</string>
    <string name="check_nfc_hint">Коснитесь метки для контроля правильности места установки и корректности параметров</string>
    <string name="check_nfc_param_name">Наим.</string>
    <string name="check_nfc_param_min">Min.</string>
    <string name="check_nfc_param_max">Max.</string>
    <string name="check_nfc_param_ed">Ед.изм.</string>

    <string name="add_plant">Помещение/оборудование</string>
    <string name="add_plant_button_add">Добавить</string>
    <string name="add_plant_list_title_nfc">NFC serial</string>
    <string name="add_plant_list_title_active">Актив.</string>
    <string name="add_plant_facility">Площадка:</string>

    <string name="link_nfc_title">Коснитесь метки и выберите помещение/оборудование</string>
    <string name="link_nfc_text_nfc_serial">NFC serial:</string>
    <string name="link_nfc_plant">Помещение/оборудование</string>
    <string name="link_nfc_button">Добавить</string>

    <string name="route_checkup_total">Всего обходов:</string>
    <string name="route_checkup_finished">Завершенных обходов:</string>
    <string name="route_checkup_cancelled">Незавершенных обходов:</string>
    <string name="route_checkups_last">Последние 10 обходов:</string>
    <string name="route_choose_route">Выбор маршрута:</string>
    <string name="route_button_start">Начать обход</string>

    <string name="checkup_date">Дата обхода:</string>
    <string name="checkup_facility">Площадка:</string>
    <string name="checkup_route_name">Маршрут:</string>

    <string name="checks_route_name">Маршрут:</string>
    <string name="checks_nfc_title">NFC serial:</string>
    <string name="checks_nfc_title_read">NFC serial (факт):</string>
    <string name="checks_comnent_hint">Коментарий:</string>
    <string name="checks_button_send">OK</string>
    <string name="checks_plant_descr">Наим.помещения:</string>
    <string name="checks_plant_descr_params">Контр.параметры:</string>
    <string name="checks_param_title">Параметр:</string>


</resources>