<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdmLinkNFCTagActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/link_nfc_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="125sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/link_nfc_text_nfc_serial"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/nfc_contents"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="NFC serial    "
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="125sp"
            android:layout_height="46dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/link_nfc_plant"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <Spinner
            android:id="@+id/spinner_plants"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/grey"
            android:contentDescription="@string/main_text_facility"
            android:minHeight="48dp"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintTop_toTopOf="@+id/textView16" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onClickAdd"
            android:text="@string/link_nfc_button"
            app:layout_constraintTop_toBottomOf="@+id/spinner_plants"
            tools:layout_editor_absoluteX="149dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>