<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onClickSetup"
        android:text="@string/main_button_setup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/main_text_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="20dp" />

        <Spinner
            android:id="@+id/spinner_facitities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/main_text_facility"
            android:minHeight="48dp"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/textViewFacility"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/main_text_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPersonName"
            tools:layout_editor_absoluteX="20dp" />

        <Button
            android:id="@+id/button_enter"
            android:layout_width="247dp"
            android:layout_height="58dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="70dp"
            android:onClick="onClickEnter"
            android:text="@string/main_button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_facitities" />

        <TextView
            android:id="@+id/textViewFacility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:text="@string/main_text_facility"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="347dp"
        android:layout_height="113dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>